Godaddy, outlook mail sent for verification and create agent, resendactivation link, activate agent from email link
